# cpm_and_doctest_demo

./: CMakeLists.txt  README.md
include/: add.h
src/: add.cpp  main.cpp
tests/: CMakeLists.txt
tests/examples/: main.cpp
